--- a/application/views/users/login.html
+++ b/application/views/users/login.html
@@ -45,7 +45,7 @@
         </div>
         <div class="col-md-6">
             <div class="panel panel-default">
-            <form role="form" id="loginform" class="panel-body">
+            <form role="form" id="loginform" method="post" class="panel-body">
             <legend>Signin with E-mail</legend>
                 <div class="form-group">
                     <label>E-mail</label>
