Added Json Support

--- a/application/views/home/index.html
+++ b/application/views/home/index.html
@@ -42,11 +42,27 @@
         <div class="row">
             <div class="col-xs-12 col-md-9">
                 <h2 class="sub-heading">
-                internship
+                    internship
                 </h2>
                 <table class="table table-striped">
                     <tbody id="opportunity">
-                    
+                        <tr>
+                            <td>
+                                <div class="media">
+                                    <a class="pull-left hidden-xs" href="Startup+Communication+Intern/348">
+                                        <img src="http://assets.swiftintern.com/uploads/images/sml_7921790.jpg" class="media-object small_image" alt="Startup Communication Intern">
+                                    </a>
+                                    <div class="media-body">
+                                        <h4 class="media-heading"><a href="Startup+Communication+Intern/348">Startup Communication Intern</a></h4>
+                                        BBA, MBA, PGDM, BA, MA, B.Com, M.Com, B.Tech, M.Tech, BE, ME
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="job-location">
+                                <p><i class="fa fa-calendar fa-fw"></i>June 30 2015</p>
+                                <p><i class="fa fa-map-marker"></i>Work From Home</p>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
                 <div class="text-center">
@@ -75,14 +91,14 @@
                             <label>Search Term</label>
                             <input type="search" name="keyword" list="keyword_list" class="form-control" placeholder="What are you looking for?" value="" autocomplete="off">
                             <datalist id="keyword_list">
-                            
+
                             </datalist>
                             <small class="help-block"></small>
                         </div>
                         <div class="form-group">
                             <label>Location</label>
                             <select data-placeholder="Select Place" id="intern_location" class="form-control chosen" multiple>
-                            
+
                             </select>
                         </div>
                         <div class="form-group">
@@ -104,11 +120,11 @@
     </div>
 </section>
 <script type="text/javascript">
-var page = 1;
-$(document).ready(function() {
-    loadSponsored('1', '1');
-    if(window.location.href.search("search") != '-1'){
-        goTo('#featured');
-    }
-});
+    var page = 1;
+    $(document).ready(function () {
+        loadSponsored('1', '1');
+        if (window.location.href.search("search") != '-1') {
+            goTo('#featured');
+        }
+    });
 </script>
