--- a/application/views/layouts/navigation/public.html
+++ b/application/views/layouts/navigation/public.html
@@ -21,10 +21,10 @@
             <!-- the menu -->
             <div class="navbar-right">
 	            <ul class="nav navbar-nav">
-	            {if isset($session->user)}
-	            	{if ($session->user->type == 'student')}
+	            {if isset($user)}
+	            	{if ($user->type == 'student')}
 						<li class="dropdown">
-	                        <a href="#" class="dropdown-toggle whitetext" data-toggle="dropdown"><i class="fa fa-user fa-lg"></i> {$session->user->name} <b class="caret"></b></a>
+	                        <a href="#" class="dropdown-toggle whitetext" data-toggle="dropdown"><i class="fa fa-user fa-lg"></i> {$user->name} <b class="caret"></b></a>
 	                        <ul class="dropdown-menu">
 	                            <li><a href="student/applications">Applied</a></li>
 	                            <li><a href="student/recommends">Recommended</a></li>
