--- a/application/views/employer/edit.html
+++ b/application/views/employer/edit.html
@@ -6,14 +6,14 @@
             <div class="row">
                 <div class="col-xs-12 col-md-6">
                     <div class="form-group">
-                        <label for="">Full Name</label>
+                        <label for="name">Full Name</label>
                         <input type="text" name="name" class="form-control" value="{echo $user->name}" required="">
                         {echo Shared\Markup::errors($errors, "first")}
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-6">
                     <div class="form-group">
-                        <label for="">Phone</label>
+                        <label for="phone">Phone</label>
                         <input type="tel" name="phone" class="form-control" value="{echo $user->phone}" required="">
                         {echo Shared\Markup::errors($errors, "first")}
                     </div>
