--- a/application/views/employer/integration.html
+++ b/application/views/employer/integration.html
@@ -1,4 +1,3 @@
-<?php require_once $dir_employer.'requires/header.php';?>
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
@@ -7,10 +6,9 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-
             <div class="row">
                 <div class="form-group">
-                <textarea class="form-control" cols="40" placeholder="refresh the page to generate"><iframe src="http://localhost/swiftintern/iframe/opportunities/<?php echo $company->id;?>"></iframe></textarea>
+                    <textarea class="form-control" cols="40" placeholder="refresh the page to generate"><iframe src="http://localhost/swiftintern/iframe/opportunities/{ echo $company->id }"></iframe></textarea>
                 </div>
             </div>
             <hr>
@@ -24,7 +22,7 @@
                             <p></p>
                         </div>
                         <div class="col-md-3">
-                            <img src="<?php echo $cdn.'img/resume/iframe-website.png' ?>" alt="<?php echo $title;?>" class="thumbnail" width=200>
+                            <img src="{echo CDN}images/resume/iframe-website.png" alt="" class="thumbnail" width=200>
                         </div>
                     </div>
                 </div>
@@ -33,11 +31,11 @@
                     <div class="panel-body">
                         <div class="col-md-9">
                             <h3 class="sub-heading"><i class="fa fa-check-circle fa-fw"></i> Efficient Code</h3>
-                            <p>Paste the code posted above any where in between the body tag of html of your website to show all the oppoortunities posted by you. </p>
+                            <p>Paste the code posted above any where in between the body tag of html of your website to show all the opportunities posted by you. </p>
                             <p></p>
                         </div>
                         <div class="col-md-3">
-                            <img src="<?php echo $cdn.'img/resume/code.jpg' ?>" alt="<?php echo $title;?>" class="thumbnail" width=150>
+                            <img src="{echo CDN}images/resume/code.jpg" alt="" class="thumbnail" width=150>
                         </div>
                     </div>
                 </div>
@@ -46,4 +44,3 @@
         </div>
     </div>
 </div>
-<?php require_once $dir_employer.'requires/footer.php';?>
