--- a/application/views/employer/opportunity_analytics.html
+++ b/application/views/employer/opportunity_analytics.html
@@ -1,4 +1,3 @@
-<?php require_once $dir_employer.'requires/header.php';?>
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
@@ -12,12 +11,9 @@
                     <div class="input-group">
                         <label class="sr-only">Opportunity</label>
                         <select name="opportunity_id" class="form-control">
-                        <?php
-                            foreach ($opportunities as $opportunity) {
-                                $opportunity = Opportunity::find_by_id('id', $opportunity->id);
-                                echo '<option value="'.$opportunity->id.'">'.$opportunity->title.'</option>';
-                            }
-                        ?>
+                            {foreach $opportunity in $opportunities}
+                                <option value="{echo $opportunity->id}">{echo $opportunity->title}</option>
+                            {/foreach}
                         </select>
                     </div>
                 </div>
@@ -25,7 +21,7 @@
                     <div class="input-group">
                         <label class="sr-only">Duration</label>
                         <span class="add-on input-group-addon"><i class="fa fa-calendar fa-fw"></i></span>
-                        <input type="text" style="width: 200px" name="range" id="range" class="form-control" value="<?php echo $range; ?>" />
+                        <input type="text" style="width: 200px" name="range" id="range" class="form-control" value="{echo $range}" />
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">View Analytics</button>
@@ -42,4 +38,3 @@
         </div>
     </div>
 </div>
-<?php require_once $dir_employer.'requires/footer.php';?>
