--- a/application/views/employer/profile_analytics.html
+++ b/application/views/employer/profile_analytics.html
@@ -1,4 +1,3 @@
-<?php require_once $dir_employer.'requires/header.php';?>
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
@@ -12,7 +11,7 @@
                     <div class="input-group">
                         <label class="sr-only">Duration</label>
                         <span class="add-on input-group-addon"><i class="fa fa-calendar fa-fw"></i></span>
-                        <input type="text" style="width: 200px" name="range" id="range" class="form-control" value="<?php echo $range; ?>" />
+                        <input type="text" style="width: 200px" name="range" id="range" class="form-control" value="{echo $range}" />
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">View Analytics</button>
@@ -29,4 +28,3 @@
         </div>
     </div>
 </div>
-<?php require_once $dir_employer.'requires/footer.php';?>
