--- a/application/views/employer/edit_company.html
+++ b/application/views/employer/edit_company.html
@@ -1,4 +1,3 @@
-<?php require_once $dir_employer.'requires/header.php';?>
 <div id="page-wrapper">
     <div class="row col-lg-12">
         <br>
@@ -7,7 +6,7 @@
             <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                     <div id="output">
-                        <img src="<?php echo $photo->image_path_thumb();?>" alt="<?php echo $company->name;?>" width=100>
+                        <img src="{echo ''}" alt="{echo $company->name}" width=100>
                     </div>
                 </div>
             </div>
@@ -24,13 +23,13 @@
                 <div class="col-xs-12 col-md-6">
                     <div class="form-group">
                     <label for="">Company Name</label>
-                    <input type="text" name="name" class="form-control" value="<?php echo $company->name;?>" required="">
+                    <input type="text" name="name" class="form-control" value="{echo $company->name}" required="">
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-6">
                     <div class="form-group">
                     <label for="">Website</label>
-                    <input type="text" name="website" class="form-control" value="<?php echo $company->website;?>">
+                    <input type="text" name="website" class="form-control" value="{echo $company->website}">
                     </div>
                 </div>
             </div>
@@ -39,13 +38,13 @@
                 <div class="col-xs-12 col-md-6">
                     <div class="form-group">
                     <label for="">Company Facebook Page</label>
-                    <input type="text" name="fbpage" class="form-control" value="<?php echo $company->fbpage;?>" placeholder="https://www.facebook.con/yourcompany">
+                    <input type="text" name="fbpage" class="form-control" value="{echo $company->fbpage}" placeholder="https://www.facebook.con/yourcompany">
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-6">
                     <div class="form-group">
                     <label for="">Country</label>
-                    <input type="text" name="country" class="form-control" value="<?php echo $company->country;?>">
+                    <input type="text" name="country" class="form-control" value="{echo $company->country}">
                     </div>
                 </div>
             </div>
@@ -54,7 +53,7 @@
                 <div class="col-xs-12 col-md-6">
                     <div class="form-group">
                     <label>Number of Employee</label>
-                    <select name="number_employee" class="form-control" value="<?php echo $company->number_employee;?>">
+                    <select name="number_employee" class="form-control" value="{echo $company->number_employee}">
                         <option value="" selected="selected">-- No of employees --</option>
                         <option value="0 to 5">0-5</option>
                         <option value="5 to 25">5-25</option>
@@ -67,7 +66,7 @@
                 <div class="col-xs-12 col-md-6">
                     <div class="form-group">
                     <label for="">Address</label>
-                    <textarea name="address" class="form-control"><?php echo $company->address;?></textarea>
+                    <textarea name="address" class="form-control">{echo $company->address}</textarea>
                     </div>
                 </div>
             </div>
@@ -75,15 +74,15 @@
                 <div class="col-xs-12 col-md-6">
                     <div class="form-group">
                     <label>Sector</label>
-                    <select name="sector" class="form-control" value="<?php echo $company->sector;?>">
-                        <?php require_once $dir_employer.'requires/company_sector.php';?>
+                    <select name="sector" class="form-control" value="{echo $company->sector}">
+                        {include employer/sector.html}
                     </select>
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-6">
                     <div class="form-group">
                     <label for="">Enquiry Phone</label>
-                    <input type="tel" name="phone" class="form-control" value="<?php echo $company->phone;?>">
+                    <input type="tel" name="phone" class="form-control" value="{echo $company->phone}">
                     </div>
                 </div>
             </div>
@@ -91,17 +90,17 @@
                 <div class="col-xs-12 col-md-12">
                     <div class="form-group">
                     <label for="">About</label>
-                    <textarea name="about" class="form-control"><?php echo strip_tags($company->about);?></textarea>
+                    <textarea name="about" class="form-control">{echo strip_tags($company->about)}</textarea>
                     </div>
                 </div>
             </div>
             <br>
-            <input type="hidden" name="organization_id" value="<?php echo $company->id;?>">
+            <input type="hidden" name="organization_id" value="{echo $company->id}">
             <button type="submit" class="btn btn-primary pull-right">Save</button>
         </form>
     </div>
 </div>
-<script type="text/javascript" src="<?php echo $cdn;?>plugins/jquery/jquery.form.min.js"></script>
+<script type="text/javascript" src="{echo CDN}plugins/jquery/jquery.form.min.js"></script>
 <script type="text/javascript">
 $(document).ready(function() { 
     var options = { 
@@ -126,4 +125,3 @@ $(document).ready(function() {
     });
 });
 </script>
-<?php require_once $dir_employer.'requires/footer.php';?>
