--- a/application/views/organizations/index.html
+++ b/application/views/organizations/index.html
@@ -12,8 +12,8 @@
                         <div class="caption">
                             <p><small>{echo substr($organization->name, 0, 20)}</small></p>
                             <p>
-                                <a href="organization/'.url($organization->name).'/'.$organization->id.'" class="btn btn-primary btn-sm" role="button">Profile</a> 
-                                <button name="follow" value="organization" id="'.$organization->id.'" class="btn btn-success brn-sm">Follow</button>
+                                <a href="organization/{echo urlencode($organization->name)}/{echo $organization->id}" class="btn btn-primary btn-sm" role="button">Profile</a> 
+                                <button name="follow" value="organization" id="{echo $organization->id}" class="btn btn-success brn-sm">Follow</button>
                             </p>
                         </div>
                     </div>
