--- a/application/views/home/contact.html
+++ b/application/views/home/contact.html
@@ -1,104 +1,104 @@
 <header class="intro-header" style="background-image: url('assets/img/others/contactus.png');">
-	<div class="container">
-		<div class="row text-center">
-			<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-				<div class="site-heading">
-					<h1 class="huge">Contact Us</h1>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="site-heading">
+                    <h1 class="huge">Contact Us</h1>
+                </div>
+            </div>
+        </div>
+    </div>
 </header>
 <div class="container">
-	<div class="row">
-		<div class="content-inner-detail">
-			<ol class="breadcrumb">
-				<li><a href="home">Home</a></li>
-				<li class="active">Contact Us</li>
-			</ol>
-			<div class="col-lg-4">
-				<div class="thumbnail text-center">
-					<i class="fa fa-whatsapp fa-5x"></i>
-					<div class="caption">
-						<h3>+91-9891048495</h3>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4">
-				<div class="thumbnail text-center">
-					<i class="fa fa-envelope fa-5x"></i>
-					<div class="caption">
-						<h3>info@swiftintern.com</h3>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4">
-				<div class="thumbnail text-center">
-					<i class="fa fa-phone fa-5x"></i>
-					<div class="caption">
-						<h3>+91-9891048495</h3>
-					</div>
-				</div>
-			</div>
-			
-			<legend>Drop Us a Message</legend>
-			<div class="text-center">
-				<button name="message" value="<?php echo $admin_id;?>" class="btn btn-success btn-lg"><i class="fa fa-envelope fa-lg"></i> Message</button>
-			</div>
-			<div class="row">
-				<div class="col-lg-4">
-					<div class="panel panel-success">
-						<div class="panel-heading">General Enquiry</div>
-						<div class="panel-body">
-							<p><i class="fa fa-user fa-lg"></i> Vishesh Ahuja</p>
-							<p><i class="fa fa-envelope fa-lg"></i> swiftintern@gmail.com</p>
-							<p><i class="fa fa-mobile fa-lg"></i> +91-8527367678 </p>
-						</div>
-						<div class="panel-footer">Call Between 9:00 AM to 9:00 PM IST</div>
-					</div>
-				</div>
-				<div class="col-lg-4">
-					<div class="panel panel-info">
-						<div class="panel-heading">Marketing</div>
-						<div class="panel-body">
-							<p><i class="fa fa-user fa-lg"></i> Saud Akhtar Siddiqui</p>
-							<p><i class="fa fa-envelope fa-lg"></i> info@swiftintern.com</p>
-							<p><i class="fa fa-mobile fa-lg"></i> +91-9891048495</p>
-						</div>
-						<div class="panel-footer">Call Between 9:00 AM to 9:00 PM IST</div>
-					</div>
-				</div>
-				<div class="col-lg-4">
-					<div class="panel panel-warning">
-						<div class="panel-heading">Advertisment</div>
-						<div class="panel-body">
-							<p><i class="fa fa-user fa-lg"></i> Udit Verma</p>
-							<p><i class="fa fa-envelope fa-lg"></i> : info@swiftintern.com</p>
-							<p><i class="fa fa-mobile fa-lg"></i> : +91-7838453187</p>
-						</div>
-						<div class="panel-footer">Call Between 9:00 AM to 9:00 PM IST</div>
-					</div>
-				</div>
-			</div>
-			<legend>Social Media - Connect With Us</legend>
-			<ul class="list-unstyled list-inline list-social-icons">
-				<li class="tooltip-social facebook-link"><a href="https://www.facebook.com/swiftintern" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook-square fa-3x"></i></a></li>
-				<li class="tooltip-social linkedin-link"><a href="http://www.linkedin.com/company/swiftintern-com" data-toggle="tooltip" data-placement="top" title="LinkedIn"><i class="fa fa-linkedin-square fa-3x"></i></a></li>
-				<li class="tooltip-social twitter-link"><a href="https://twitter.com/swiftintern" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fa fa-twitter-square fa-3x"></i></a></li>
-				<li class="tooltip-social google-plus-link"><a href="https://plus.google.com/+Swiftinternindia" data-toggle="tooltip" data-placement="top" title="Google+"><i class="fa fa-google-plus-square fa-3x"></i></a></li>
-				<li class="tooltip-social rss-link"><a href="mailto:info@swiftintern.com" data-toggle="tooltip" data-placement="top" title="RSS"><i class="fa fa-envelope fa-3x"></i></a></li>
-			</ul>
-			<legend>Visit Us</legend>
-			<address>
-				SWIFTDEAL ONLINE LLP <br>
-				O - 54 F/F Batla House, Jamia Nagar,<br> 
-				New Delhi - 110025, Delhi, INDIA
-			</address>
-		</div>
-	</div>
+    <div class="row">
+        <div class="content-inner-detail">
+            <ol class="breadcrumb">
+                <li><a href="home">Home</a></li>
+                <li class="active">Contact Us</li>
+            </ol>
+            <div class="col-lg-4">
+                <div class="thumbnail text-center">
+                    <i class="fa fa-whatsapp fa-5x"></i>
+                    <div class="caption">
+                        <h3>+91-9891048495</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="thumbnail text-center">
+                    <i class="fa fa-envelope fa-5x"></i>
+                    <div class="caption">
+                        <h3>info@swiftintern.com</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="thumbnail text-center">
+                    <i class="fa fa-phone fa-5x"></i>
+                    <div class="caption">
+                        <h3>+91-9891048495</h3>
+                    </div>
+                </div>
+            </div>
+
+            <legend>Drop Us a Message</legend>
+            <div class="text-center">
+                <button name="message" value="" class="btn btn-success btn-lg"><i class="fa fa-envelope fa-lg"></i> Message</button>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="panel panel-success">
+                        <div class="panel-heading">General Enquiry</div>
+                        <div class="panel-body">
+                            <p><i class="fa fa-user fa-lg"></i> Vishesh Ahuja</p>
+                            <p><i class="fa fa-envelope fa-lg"></i> swiftintern@gmail.com</p>
+                            <p><i class="fa fa-mobile fa-lg"></i> +91-8527367678 </p>
+                        </div>
+                        <div class="panel-footer">Call Between 9:00 AM to 9:00 PM IST</div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="panel panel-info">
+                        <div class="panel-heading">Marketing</div>
+                        <div class="panel-body">
+                            <p><i class="fa fa-user fa-lg"></i> Saud Akhtar Siddiqui</p>
+                            <p><i class="fa fa-envelope fa-lg"></i> info@swiftintern.com</p>
+                            <p><i class="fa fa-mobile fa-lg"></i> +91-9891048495</p>
+                        </div>
+                        <div class="panel-footer">Call Between 9:00 AM to 9:00 PM IST</div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="panel panel-warning">
+                        <div class="panel-heading">Advertisment</div>
+                        <div class="panel-body">
+                            <p><i class="fa fa-user fa-lg"></i> Udit Verma</p>
+                            <p><i class="fa fa-envelope fa-lg"></i> : info@swiftintern.com</p>
+                            <p><i class="fa fa-mobile fa-lg"></i> : +91-7838453187</p>
+                        </div>
+                        <div class="panel-footer">Call Between 9:00 AM to 9:00 PM IST</div>
+                    </div>
+                </div>
+            </div>
+            <legend>Social Media - Connect With Us</legend>
+            <ul class="list-unstyled list-inline list-social-icons">
+                <li class="tooltip-social facebook-link"><a href="https://www.facebook.com/swiftintern" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook-square fa-3x"></i></a></li>
+                <li class="tooltip-social linkedin-link"><a href="http://www.linkedin.com/company/swiftintern-com" data-toggle="tooltip" data-placement="top" title="LinkedIn"><i class="fa fa-linkedin-square fa-3x"></i></a></li>
+                <li class="tooltip-social twitter-link"><a href="https://twitter.com/swiftintern" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fa fa-twitter-square fa-3x"></i></a></li>
+                <li class="tooltip-social google-plus-link"><a href="https://plus.google.com/+Swiftinternindia" data-toggle="tooltip" data-placement="top" title="Google+"><i class="fa fa-google-plus-square fa-3x"></i></a></li>
+                <li class="tooltip-social rss-link"><a href="mailto:info@swiftintern.com" data-toggle="tooltip" data-placement="top" title="RSS"><i class="fa fa-envelope fa-3x"></i></a></li>
+            </ul>
+            <legend>Visit Us</legend>
+            <address>
+                SWIFTDEAL ONLINE LLP <br>
+                O - 54 F/F Batla House, Jamia Nagar,<br> 
+                New Delhi - 110025, Delhi, INDIA
+            </address>
+        </div>
+    </div>
 </div>
 <script type="text/javascript">
-$(document).ready(function() {
-	$('.navbar').css('margin-bottom', '-20px');
-});
+    $(document).ready(function () {
+        $('.navbar').css('margin-bottom', '-20px');
+    });
 </script>
